--- a/L4/Занятие 4.ipynb
+++ b/L4/Занятие 4.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -93,73 +93,100 @@
      "output_type": "stream",
      "text": [
       "(27820, 12)\n",
-      "0     0.0\n",
-      "1     0.0\n",
-      "2     0.0\n",
-      "3     0.0\n",
-      "4     0.0\n",
-      "5     0.0\n",
-      "6     0.0\n",
-      "7     0.0\n",
-      "8     0.0\n",
-      "9     0.0\n",
-      "10    0.0\n",
-      "11    0.0\n",
-      "12    0.0\n",
-      "13    0.0\n",
-      "14    0.0\n",
-      "15    0.0\n",
-      "16    0.0\n",
-      "17    0.0\n",
-      "18    0.0\n",
-      "19    0.0\n",
-      "20    0.0\n",
-      "21    0.0\n",
-      "22    0.0\n",
-      "23    0.0\n",
-      "24    0.0\n",
-      "25    0.0\n",
-      "26    0.0\n",
-      "27    0.0\n",
-      "28    0.0\n",
-      "29    0.0\n",
-      "Name: HDI_for_year, dtype: float64\n"
+      "<bound method DataFrame.info of           country  year     sex          age  suicides_no  population  \\\n",
+      "0         Albania  1987    male  15-24 years           21      312900   \n",
+      "1         Albania  1987    male  35-54 years           16      308000   \n",
+      "2         Albania  1987  female  15-24 years           14      289700   \n",
+      "3         Albania  1987    male    75+ years            1       21800   \n",
+      "4         Albania  1987    male  25-34 years            9      274300   \n",
+      "...           ...   ...     ...          ...          ...         ...   \n",
+      "27815  Uzbekistan  2014  female  35-54 years          107     3620833   \n",
+      "27816  Uzbekistan  2014  female    75+ years            9      348465   \n",
+      "27817  Uzbekistan  2014    male   5-14 years           60     2762158   \n",
+      "27818  Uzbekistan  2014  female   5-14 years           44     2631600   \n",
+      "27819  Uzbekistan  2014  female  55-74 years           21     1438935   \n",
+      "\n",
+      "       suicides_100k_pop    country_year  HDI_for_year    gdp_for_year  \\\n",
+      "0                   6.71     Albania1987           NaN   2,156,624,900   \n",
+      "1                   5.19     Albania1987           NaN   2,156,624,900   \n",
+      "2                   4.83     Albania1987           NaN   2,156,624,900   \n",
+      "3                   4.59     Albania1987           NaN   2,156,624,900   \n",
+      "4                   3.28     Albania1987           NaN   2,156,624,900   \n",
+      "...                  ...             ...           ...             ...   \n",
+      "27815               2.96  Uzbekistan2014         0.675  63,067,077,179   \n",
+      "27816               2.58  Uzbekistan2014         0.675  63,067,077,179   \n",
+      "27817               2.17  Uzbekistan2014         0.675  63,067,077,179   \n",
+      "27818               1.67  Uzbekistan2014         0.675  63,067,077,179   \n",
+      "27819               1.46  Uzbekistan2014         0.675  63,067,077,179   \n",
+      "\n",
+      "       gdp_per_capita       generation  \n",
+      "0                 796     Generation X  \n",
+      "1                 796           Silent  \n",
+      "2                 796     Generation X  \n",
+      "3                 796  G.I. Generation  \n",
+      "4                 796          Boomers  \n",
+      "...               ...              ...  \n",
+      "27815            2309     Generation X  \n",
+      "27816            2309           Silent  \n",
+      "27817            2309     Generation Z  \n",
+      "27818            2309     Generation Z  \n",
+      "27819            2309          Boomers  \n",
+      "\n",
+      "[27820 rows x 12 columns]>\n",
+      "[0.777 0.619 0.656 0.695 0.722 0.781 0.783 0.694 0.705 0.731 0.762 0.775\n",
+      " 0.811 0.818 0.831 0.833 0.836 0.632 0.605 0.648 0.721 0.723 0.728 0.733\n",
+      " 0.865 0.882 0.898 0.927 0.93  0.932 0.933 0.935 0.764 0.794 0.815 0.853\n",
+      " 0.879 0.881 0.884 0.885 0.609 0.64  0.778 0.78  0.774 0.786 0.727 0.816\n",
+      " 0.819 0.817 0.821 0.824 0.7   0.716 0.753 0.765 0.793 0.785 0.683 0.796\n",
+      " 0.798 0.806 0.851 0.874 0.866 0.883 0.886 0.889 0.888 0.89  0.644 0.664\n",
+      " 0.701 0.71  0.711 0.715 0.724 0.576 0.608 0.702 0.737 0.742 0.746 0.752\n",
+      " 0.755 0.686 0.696 0.713 0.749 0.773 0.779 0.782 0.827 0.849 0.861 0.867\n",
+      " 0.892 0.903 0.909 0.91  0.912 0.654 0.699 0.788 0.814 0.83  0.832 0.573\n",
+      " 0.596 0.629 0.679 0.706 0.718 0.72  0.623 0.652 0.682 0.704 0.75  0.756\n",
+      " 0.761 0.766 0.807 0.653 0.685 0.73  0.776 0.772 0.768 0.769 0.8   0.848\n",
+      " 0.852 0.85  0.847 0.863 0.868 0.87  0.862 0.902 0.908 0.92  0.921 0.923\n",
+      " 0.631 0.645 0.665 0.674 0.698 0.717 0.732 0.522 0.566 0.603 0.638 0.658\n",
+      " 0.662 0.666 0.719 0.838 0.855 0.859 0.857 0.869 0.878 0.741 0.825 0.887\n",
+      " 0.672 0.735 0.74  0.747 0.754 0.801 0.906 0.911 0.915 0.916 0.759 0.799\n",
+      " 0.864 0.739 0.483 0.513 0.552 0.611 0.617 0.624 0.626 0.627 0.542 0.581\n",
+      " 0.618 0.63  0.634 0.802 0.823 0.828 0.826 0.896 0.897 0.899 0.77  0.803\n",
+      " 0.895 0.893 0.894 0.738 0.829 0.856 0.873 0.872 0.65  0.671 0.729 0.791\n",
+      " 0.891 0.69  0.804 0.795 0.809 0.812 0.615 0.562 0.593 0.614 0.639 0.655\n",
+      " 0.67  0.813 0.837 0.839 0.805 0.88  0.822 0.575 0.647 0.748 0.877 0.919\n",
+      " 0.922 0.82  0.905 0.907 0.625 0.628 0.917 0.931 0.94  0.941 0.942 0.944\n",
+      " 0.714 0.564 0.579 0.604 0.646 0.668 0.669 0.677 0.84  0.843 0.676 0.844\n",
+      " 0.841 0.703 0.751 0.691 0.697 0.757 0.771 0.736 0.743 0.767 0.763 0.876\n",
+      " 0.613 0.643 0.651 0.659 0.663 0.725 0.845 0.597 0.692 0.707 0.709 0.901\n",
+      " 0.904 0.846 0.924 0.925 0.928 0.539 0.572 0.684 0.726 0.673 0.688 0.913\n",
+      " 0.667 0.79  0.594 0.661 0.675]\n",
+      "===>\n",
+      "Количество самоубийств: country\n",
+      "Albania                    1970\n",
+      "Antigua and Barbuda          11\n",
+      "Argentina                 82219\n",
+      "Armenia                    1905\n",
+      "Aruba                       101\n",
+      "                         ...   \n",
+      "United Arab Emirates        622\n",
+      "United Kingdom           136805\n",
+      "United States           1034013\n",
+      "Uruguay                   13138\n",
+      "Uzbekistan                34803\n",
+      "Name: suicides_no, Length: 101, dtype: int64\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9577/2928252339.py:7: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/tmp/ipykernel_2619/2071120855.py:8: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
-      "  df['HDI_for_year'].fillna(0,inplace=True)\n"
+      "  df['HDI_for_year'].fillna(df['HDI_for_year'].mean().round(3),inplace=True)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "country              0\n",
-       "year                 0\n",
-       "sex                  0\n",
-       "age                  0\n",
-       "suicides_no          0\n",
-       "population           0\n",
-       "suicides_100k_pop    0\n",
-       "country_year         0\n",
-       "HDI_for_year         0\n",
-       "gdp_for_year         0\n",
-       "gdp_per_capita       0\n",
-       "generation           0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -169,12 +196,42 @@
     "       'suicides_100k_pop', 'country_year', 'HDI_for_year',\n",
     "       'gdp_for_year', 'gdp_per_capita', 'generation']\n",
     "print(df.shape)\n",
-    "df['HDI_for_year'].fillna(0,inplace=True)\n",
-    "print(df.loc[df.loc[:,'HDI_for_year']!='nan']['HDI_for_year'].head(30))\n",
-    "#print(df['HDI_for_year'].unique())\n",
-    "df.isna().sum()\n",
-    "\n",
-    "\n"
+    "print(df.info)\n",
+    "df['HDI_for_year'].fillna(df['HDI_for_year'].mean().round(3),inplace=True)\n",
+    "#print(df.loc[df.loc[:,'HDI_for_year']<0]['HDI_for_year'].head(30))\n",
+    "print(df['HDI_for_year'].unique())\n",
+    "#print(df.isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Количество самоубийств: country\n",
+      "Albania                    1970\n",
+      "Antigua and Barbuda          11\n",
+      "Argentina                 82219\n",
+      "Armenia                    1905\n",
+      "Aruba                       101\n",
+      "                         ...   \n",
+      "United Arab Emirates        622\n",
+      "United Kingdom           136805\n",
+      "United States           1034013\n",
+      "Uruguay                   13138\n",
+      "Uzbekistan                34803\n",
+      "Name: suicides_no, Length: 101, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "country_grouping = df.groupby('country')\n",
+    "suicides_country_count = country_grouping['suicides_no'].sum()\n",
+    "print('Количество самоубийств:', suicides_country_count)"
    ]
   },
   {
@@ -236,22 +293,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Странны с наименьшим уровнем самоубийств\n",
+      "country\n",
+      "Dominica                  0\n",
+      "Saint Kitts and Nevis     0\n",
+      "San Marino                4\n",
+      "Antigua and Barbuda      11\n",
+      "Maldives                 20\n",
+      "Name: suicides_no, dtype: int64\n",
+      "==================================================\n",
+      "Странны с наивысшим уровнем самоубийств\n",
+      "country\n",
+      "Russian Federation    1209742\n",
+      "United States         1034013\n",
+      "Japan                  806902\n",
+      "France                 329127\n",
+      "Ukraine                319950\n",
+      "Name: suicides_no, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "#Youre code is here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#Youre code is here\n"
+    "print('Странны с наименьшим уровнем самоубийств',suicides_country_count.sort_values().head(5),'='*50,\n",
+    "      'Странны с наивысшим уровнем самоубийств',suicides_country_count.sort_values(ascending=False).head(5),sep='\\n')\n"
    ]
   },
   {
@@ -263,11 +334,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Странны с наименьшим уровнем самоубийств среди женщин\n",
+      "country\n",
+      "Dominica                 0\n",
+      "Saint Kitts and Nevis    0\n",
+      "San Marino               0\n",
+      "Oman                     0\n",
+      "Antigua and Barbuda      1\n",
+      "Name: suicides_no, dtype: int64\n",
+      "==================================================\n",
+      "Странны с наивысшим уровнем самоубийств среди женщин\n",
+      "country\n",
+      "Japan                 251630\n",
+      "Russian Federation    214330\n",
+      "United States         213797\n",
+      "France                 89419\n",
+      "Republic of Korea      82615\n",
+      "Name: suicides_no, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "#Youre code is here\n"
+    "female_suicides = df.loc[df['sex']=='female']\n",
+    "female_country_grouping = female_suicides.groupby('country')\n",
+    "female_suicides_country_count = female_country_grouping['suicides_no'].sum()\n",
+    "print('Странны с наименьшим уровнем самоубийств среди женщин',female_suicides_country_count.sort_values().head(5),'='*50,\n",
+    "      'Странны с наивысшим уровнем самоубийств среди женщин',female_suicides_country_count.sort_values(ascending=False).head(5),sep='\\n')"
    ]
   },
   {
@@ -287,11 +386,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "224.97\n"
+     ]
+    }
+   ],
    "source": [
-    "#Youre code is here "
+    "print(df['suicides_100k_pop'].max())"
    ]
   },
   {
@@ -307,11 +414,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1258    Aruba\n",
+      "Name: country, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "#Youre code is here"
+    "#df['suicides_100k_pop'] == df['suicides_100k_pop'].max()\n",
+    "print(df.loc[df['suicides_100k_pop']==df['suicides_100k_pop'].max()]['country'])"
    ]
   },
   {
@@ -329,11 +446,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.02\n"
+     ]
+    }
+   ],
    "source": [
-    "#Youre code is here"
+    "df_drop_mull = df[df['suicides_100k_pop']!=0]\n",
+    "print(df_drop_mull['suicides_100k_pop'].min())"
    ]
   },
   {
@@ -345,11 +471,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23347    South Africa\n",
+      "23371    South Africa\n",
+      "23479    South Africa\n",
+      "25060        Thailand\n",
+      "25061        Thailand\n",
+      "Name: country, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "#Youre code is here"
+    "print(df_drop_mull.loc[df_drop_mull['suicides_100k_pop']==df_drop_mull['suicides_100k_pop'].min()]['country'])"
    ]
   },
   {
@@ -387,9 +526,23 @@
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.0\n"
+     ]
+    }
+   ],
    "source": [
-    "#Youre code is here"
+    "music=pd.read_csv('yandex_music.csv')\n",
+    "music.columns = ['user_id','track_name','artist_name','genre_name','city','time','day']\n",
+    "music['time']=music['time'].str.split(':').str[1].astype(int)\n",
+    "\n",
+    "music_drop_mull = music[music['time']!=0]\n",
+    "music_median = music_drop_mull['time'].median()\n",
+    "print(music_median)\n"
    ]
   },
   {
@@ -401,19 +554,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.316904848188823\n"
+     ]
+    }
+   ],
    "source": [
-    "#Youre code is here"
+    "print(music_drop_mull['time'].mean())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
